# multi-scale-splatter-image

./: .gitattributes  Multi_Scale_Splatter_Image.ipynb  README.md  README.txt  gradio_app.py  pyproject.toml  requirements.txt
gaussian_renderer/: __init__.py  diff_gaussian_rasterization.py
local/outputs/: cars.base.mean_psnrs.csv  cars.base.psnrs.csv  cars.multi_scale.mean_psnrs.csv  cars.multi_scale.psnrs.csv  cars.multi_scale_pre.mean_psnrs.csv  cars.multi_scale_pre.psnrs.csv  cars.paper.mean_psnrs.csv  chairs.base.mean_psnrs.csv  chairs.base.psnrs.csv  chairs.multi_scale.mean_psnrs.csv  chairs.multi_scale.psnrs.csv  chairs.multi_scale_pre.mean_psnrs.csv  chairs.multi_scale_pre.psnrs.csv  chairs.paper.mean_psnrs.csv
local/pre-trained/: cars.base.pt  cars.multi_scale.pt  cars.multi_scale_pre.pt  cars.paper.pt  chairs.base.pt  chairs.multi_scale.pt  chairs.multi_scale_pre.pt  chairs.paper.pt
