[project]
name = "multi-scale-splatter-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.8.0",
    "ema-pytorch>=0.7.3",
    "gradio>=4.44.1",
    "huggingface-hub>=0.26.2",
    "hydra-core>=1.3.2",
    "imageio>=2.36.0",
    "lightning>=2.4.0",
    "lpips>=0.1.4",
    "markupsafe>=2.1.5",
    "moviepy>=1.0.3",
    "omegaconf>=2.3.0",
    "plyfile>=1.1",
    "rembg>=2.0.59",
    "timm>=1.0.11",
    "tqdm>=4.67.0",
    "wandb>=0.18.7",
]
